2013-03-14  Julien Bect  <julien.bect@supelec.fr>

	Fix another bug in stk_param_init().

	* paramestim/stk_param_init.m: Remove the second normalization
	that was performed in the internal function paraminit_().

2013-03-13  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_param_init().

	* paramestim/stk_param_init.m: Remove the value of the regularity
	parameter from param for stk_matercov32_iso and
	stk_materncov52_iso covariance functions.

	Avoid the use of 'stable' with unique().

	* misc/dist/stk_filldist_exact.m: Avoid the use of 'stable' with
	unique() since Octave doesn't currently support it (and we don't
	really need it, anyway, or so it seems).

2013-03-12  Julien Bect  <julien.bect@supelec.fr>

	Check the size of 'box' in stk_normalize.

	* utils/stk_normalize.m: Check the size of 'box' before using
	it. Raise an error if it's not [2 d].

	Return empty from stk_param_estim when lnv is not estimated.

	* paramestim/stk_param_estim.m: Return empty for the second output
	argument when lognoisevariance is not estimated (to avoid warnings
	about output arguments not being assigned).

2013-02-27  Julien Bect  <julien.bect@supelec.fr>

	Add function stk_gpquadform() to compute Gibbs-Paciorek quadratic
	forms.

	* misc/dist/stk_gpquadform.m: New function to compute
	Gibbs-Paciorek quadratic forms.

	* misc/dist/private/stk_gpquadform_pairwise.c,
	misc/dist/private/stk_gpquadform_matrixx.c,
	misc/dist/private/stk_gpquadform_matrixy.c: C sources for the fast
	computation of stk_quadform() in several special cases.

	* misc/config/stk_compile_all.m: Compile the new MEX-files.

2013-02-26  Julien Bect  <julien.bect@supelec.fr>

	Prepare stk_param_estim for parameter objects (instead of vectors).

	* paramestim/stk_param_estim.m: Prepare for parameter objects. Rename
  	  the optimized vector for 'param' to 'u' for clarity (since it is
	  sometimes an extended parameter vector).

2013-02-10  Julien Bect  <julien.bect@supelec.fr>
