@@ -54,7 +54,7 @@ switch model.covariance_type
     case 'stk_materncov_aniso'
         nu = 5/2 * size(xi.a, 2);
         xi = stk_normalize(xi, box);
-        [param, lnv] = paraminit_(xi, yi, box, nu, model.order, noisy);
+        [param, lnv] = paraminit_(xi, yi, [], nu, model.order, noisy);
         param = [param(1:2); param(3) - log(diff(box, [], 1))'];
         
     case 'stk_materncov32_iso'
@@ -63,7 +63,7 @@ switch model.covariance_type
         
     case 'stk_materncov32_aniso'
         xi = stk_normalize(xi, box);
-        [param, lnv] = paraminit_(xi, yi, box, 3/2, model.order, noisy);
+        [param, lnv] = paraminit_(xi, yi, [], 3/2, model.order, noisy);
         param = [param(1); param(3) - log(diff(box, [], 1))'];
         
     case 'stk_materncov52_iso'
@@ -72,7 +72,7 @@ switch model.covariance_type
         
     case 'stk_materncov52_aniso'
         xi = stk_normalize(xi, box);
-        [param, lnv] = paraminit_(xi, yi, box, 5/2, model.order, noisy);
+        [param, lnv] = paraminit_(xi, yi, [], 5/2, model.order, noisy);
         param = [param(1); param(3) - log(diff(box, [], 1))'];
         
     otherwise
@@ -85,6 +85,8 @@ end % function stk_param_init
 
 function [param, lnv] = paraminit_(xi, yi, box, nu, order, noisy)
 
+[ni d] = size(xi.a);
+
 model = stk_model('stk_materncov_iso');
 model.order = order;
 
@@ -96,7 +98,15 @@ else
 end
 
 % list of possible values for the range parameter
-rho_list = sqrt(size(box, 2)) * 10 .^ (-2:.5:0);
+if isempty(box)
+    % assume box = repmat([0; 1], 1, d)
+    box_diameter = sqrt(d);
+else
+    box_diameter = sqrt(sum(diff(box) .^ 2));
+end
+rho_max  = 2 * box_diameter;
+rho_min  = box_diameter / 50;
+rho_list = logspace(rho_min, rho_max, 5);
 
 % try all possible combinations
 eta_best    = NaN;
@@ -105,6 +115,7 @@ sigma2_best = NaN;
 aLL_best    = +Inf;
 for eta = eta_list
     for rho = rho_list
+        fprintf('[stk_param_init] eta = %.3e, rho = %.3e...\n', eta, rho);
         % first use sigma2 = 1
         model.param = log([1.0; nu; 1/rho]);
         model.lognoisevariance = log(eta);
@@ -113,7 +124,7 @@ for eta = eta_list
         % (TODO: use Cholesky ?)
         beta = (P' * (K \ P)) \ (P' * yi.a);
         zi = yi.a - P * beta;
-        sigma2 = 1 / (size(xi.a, 1) - length(beta)) * zi' * (K \ zi);
+        sigma2 = 1 / (ni - length(beta)) * zi' * (K \ zi);
         % now compute the antilog-likelihood
         if sigma2 > 0
             model.param(1) = log(sigma2);
